# vcatd-vvdec-plugin

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  vvdec_jni.cc
app/src/main/java/com/roncatech/libvcat/vvdec/: NativeVvdec.java  VcatVvcdecPlugin.java  VvcNalUnitUtil.java  VvcVideoCfgParser.java  VvdecDecoder.java  VvdecDecoderException.java  VvdecLibrary.java  VvdecOutputBuffer.java  VvdecProvider.java  VvdecRendererProvider.java  VvdecVideoRenderer.java
app/src/test/java/com/roncatech/libvcat/vvdec/: VvcVideoCfgParserTest.java
gradle/wrapper/: gradle-wrapper.properties
